Fixing alignment issues

--- a/packages/nouns-webapp/src/components/DAOnstream/DAOnstream.module.css
+++ b/packages/nouns-webapp/src/components/DAOnstream/DAOnstream.module.css
@@ -28,6 +28,7 @@
   top: 50%;
   left: 0;
 
+  border-radius: 10%;
   height: 3px;
   width: calc(50% - 185px);
   background: #5b6459;
@@ -39,6 +40,7 @@
   top: 50%;
   right: 0;
 
+  border-radius: 10%;
   height: 3px;
   width: calc(50% - 185px);
   background: #5b6459;
@@ -324,7 +326,7 @@
     width: 100%;
 
     top: unset;
-    bottom: calc(100% - 1px);
+    bottom: 100%;
     left: 0;
 
     border-right: 2px solid #34885a;
